ajouté dossier decoupage

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <link href="CSS/style.css" rel="stylesheet" />
+    <!--connection au serveur goggle-font Ici la police que l'on a choisie est Raleway'-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <!-- Placer votre kit ici -->
+    <!-- Placer votre kit de logo ici -->
     <script src="https://kit.fontawesome.com/bd510b2bbe.js" crossorigin="anonymous"></script>
     <title>booki</title>
 </head>
 <body>
+    <h2>Essai d'apparition du logo thumb'</h2>
+    <br />
     <i class="fa-solid fa-thumbs-up fa-5x"></i>
 </body>
 </html>
