modification des fichiers index.html et style.css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,38 @@
     <title>booki</title>
 </head>
 <body>
-    <h2>Essai d'apparition du logo thumb'</h2>
-    <br />
-    <i class="fa-solid fa-thumbs-up fa-5x"></i>
+    <header class="header">
+        <div class="accueuil">
+            <div class="logo">
+                <img src="images/logo/Booki.png" ; alt="Booki@3x.png" />
+            </div>
+
+            <div class="menu">
+                <a href="#">Hèbergements</a>
+                <a href="#">Activités</a>
+            </div>
+        </div>
+        <h3>Trouvez votre hèbergement pour des vacances de reve</h3>
+        <h5>En plein centre-ville ou en pleine nature</h5>
+        <div>
+            <h1>ici recherche</h1>
+        </div>
+        <div class="filtre">      
+            <div class="liens">
+                <a href="#">Filtre</a>
+                <div class="lien1">
+                    <a href="#">Economique</a>
+                    <a href="#">Familial</a>
+                </div>
+                <div class="lien2">
+                    <a href="#">Romantique</a>
+                    <a href="#">Animaux autorisés</a>
+                </div>
+            </div>
+        </div>
+        <h3>Plus de 500 logements sont disponibles dans cette ville</h3>
+
+    </header>
+   
 </body>
 </html>
