mofification des fichiers index et style

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         </div>
         <h3>Trouvez votre hèbergement pour des vacances de reve</h3>
         <h5>En plein centre-ville ou en pleine nature</h5>
-        <div>
-            <h1>ici recherche</h1>
+        <div class="recherche">
+            <p>ici on recherche</p>
         </div>
         <div class="filtre">      
             <div class="liens">
-                <a href="#">Filtre</a>
+                <p id="nota">Filtres</p>
                 <div class="lien1">
                     <a href="#">Economique</a>
                     <a href="#">Familial</a>
