implementé une barre de navigation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="accueuil">
+        <nav class="accueuil">
             <div class="logo">
                 <img src="images/logo/Booki.png" ; alt="Booki@3x.png" />
             </div>
@@ -23,7 +23,7 @@
                 <a href="#">Hèbergements</a>
                 <a href="#">Activités</a>
             </div>
-        </div>
+        </nav>
         <h3>Trouvez votre hèbergement pour des vacances de reve</h3>
         <h5>En plein centre-ville ou en pleine nature</h5>
         <div class="recherche">
