--- a/index.html
+++ b/index.html
@@ -61,98 +61,111 @@
     </header>
 
     <main class="main">
-
         <section class="hebergement-vert">
-
             <section class="hebergement-bleu">
-                <h1 id="heberg">Hébergements à Marseille</h1>
+                <p>Hébergements à Marseille</p>
                 <section class="hebergement-rouge">
-                    <article class="hebergement-jaune" >
-                        <div class="card">
-                            <img src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar">
+                    <article class="hebergement-jaune">
+                        <div class="card-hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar">
                             <div class="container">
                                 <h4><b>Auberge La Canebière </b></h4>
                                 <p>Nuit à partir de 25 €</p>
                             </div>
                         </div>
-                        <div class="card">
-                            <img src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar">
+                        <div class="card-hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Avatar">
                             <div class="container">
-                                <h4><b>Auberge La Canebière </b></h4>
-                                <p>Nuit à partir de 25 €</p>
+                                <h4><b>Hotel du port </b></h4>
+                                <p>Nuit à partir de 52 €</p>
                             </div>
                         </div>
-                        <div class="card">
-                            <img src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar">
+                        <div class="card-hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Avatar">
                             <div class="container">
-                                <h4><b>Auberge La Canebière </b></h4>
-                                <p>Nuit à partir de 25 €</p>
+                                <h4><b>Hotel les mouettes </b></h4>
+                                <p>Nuit à partir de 76 €</p>
                             </div>
                         </div>
                     </article>
                     <article class="hebergement-jaune">
-                        <div class="card">
-                            <img src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar">
+                        <div class="card-hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Avatar">
                             <div class="container">
-                                <h4><b>Auberge La Canebière </b></h4>
-                                <p>Nuit à partir de 25 €</p>
+                                <h4><b>Hotel de la mer </b></h4>
+                                <p>Nuit à partir de 46 €</p>
                             </div>
                         </div>
-                        <div class="card">
-                            <img src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar">
+                        <div class="card-hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Avatar">
                             <div class="container">
-                                <h4><b>Auberge La Canebière </b></h4>
-                                <p>Nuit à partir de 25 €</p>
+                                <h4><b>Auberge le panier </b></h4>
+                                <p>Nuit à partir de 23 €</p>
                             </div>
                         </div>
-                        <div class="card">
-                            <img src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar">
+                        <div class="card-hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Avatar">
                             <div class="container">
-                                <h4><b>Auberge La Canebière </b></h4>
-                                <p>Nuit à partir de 25 €</p>
+                                <h4><b>Hotel chez Amina </b></h4>
+                                <p>Nuit à partir de 96 €</p>
                             </div>
                         </div>
                     </article>
                 </section>
 
                 <h5 id="next">Afficher plus</h5>
-
             </section>
-<!--
             <section class="populaire-rouge">
-                <h1>Les plus populaires</h1>
+                <p>Les plus populaires</p>
                 <article class="populaire-jaune">
-                        <div class="card">
-                            <img src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar">
-                            <div class="container">
-                                <h4><b>Auberge La Canebière </b></h4>
-                                <p>Nuit à partir de 25 €</p>
-                            </div>
+                    <div class="card-populaire">
+                        <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Avatar">
+                        <div class="container">
+                            <h4><b>Hotel le soleil du matin </b></h4>
+                            <p>Nuit à partir de 128 €</p>
                         </div>
-                        <div class="card">
-                            <img src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar">
-                            <div class="container">
-                                <h4><b>Auberge La Canebière </b></h4>
-                                <p>Nuit à partir de 25 €</p>
-                            </div>
+                    </div>
+                    <div class="card-populaire">
+                        <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Avatar">
+                        <div class="container">
+                            <h4><b>Chambre d'hotes Au coeur de l'eau </b></h4>
+                            <p>Nuit à partir de 71 €</p>
                         </div>
-                        <div class="card">
-                            <img src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar">
-                            <div class="container">
-                                <h4><b>Auberge La Canebière </b></h4>
-                                <p>Nuit à partir de 25 €</p>
-                            </div>
+                    </div>
+                    <div class="card-populaire">
+                        <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Avatar">
+                        <div class="container">
+                            <h4><b>Hotel Bleu et Blanc </b></h4>
+                            <p>Nuit à partir de 68 €</p>
                         </div>
+                    </div>
                 </article>
-
             </section>
-    -->
-
         </section>
     </main>
 
-    <footer>
+    <section class="activite">
+        <p>Activités à Marseille</p>
+        <section class="images" >
 
+            <div>
+                <img class="Img-activite" src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Avatar">
+            </div>
+            <div>
+                <img class="Img-activite" src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar">
+            </div>
+            <div>
+                <img class="Img-activite" src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar">
+            </div>
+            <div>
+                <img class="Img-activite" src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar">
+            </div>
+
+        </section>
+
+    </section>
+
+    <footer>
         <div class="propos">
             <p class="footer">A propos</p>
             <br />
@@ -176,12 +189,6 @@
             <br />
             <a href="#">Nous contacter</a>
         </div>
-
-
-
-
-
-
     </footer>
 
 </body>
