rajouté les images activitées

--- a/index.html
+++ b/index.html
@@ -145,22 +145,45 @@
     </main>
 
     <section class="activite">
-        <p>Activités à Marseille</p>
-        <section class="images" >
+        <p id="activite">Activités à Marseille</p>
+        <section class="images-activite">
 
-            <div>
-                <img class="Img-activite" src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Avatar">
-            </div>
-            <div>
-                <img class="Img-activite" src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar">
-            </div>
-            <div>
-                <img class="Img-activite" src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar">
-            </div>
-            <div>
-                <img class="Img-activite" src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar">
+            <div class="card-activite">
+                <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Avatar">
+                <p>Vieux-Port</p>
             </div>
 
+            <div class="card-activite">
+                <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar">
+                <p>Fort de Pomègues</p>
+            </div>
+
+            <div class="card-activite">
+                <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar">
+                <p>Parc national des Calanques</p>
+            </div>
+
+            <div class="card-activite">
+                <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar">
+                <p>Notre-Dame-de-la-Garde</p>
+            </div>
+
+
+
+
+
+
+
+
+            <!--
+
+            src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar">
+
+    <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar">
+
+
+    <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar">
+    -->
         </section>
 
     </section>
