changé la nuance du gris

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </article>
                 </section>
 
-                <h5 id="next">Afficher plus</h5>
+                <h5 id="next"><a href="#">Afficher plus</a></h5>
             </section>
             <section class="populaire-rouge">
                 <p>Les plus populaires</p>
@@ -147,71 +147,52 @@
     <section class="activite">
         <p id="activite">Activités à Marseille</p>
         <section class="images-activite">
-
             <div class="card-activite">
                 <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Avatar">
                 <p>Vieux-Port</p>
             </div>
-
             <div class="card-activite">
                 <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar">
                 <p>Fort de Pomègues</p>
             </div>
-
             <div class="card-activite">
                 <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar">
                 <p>Parc national des Calanques</p>
             </div>
-
             <div class="card-activite">
                 <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar">
                 <p>Notre-Dame-de-la-Garde</p>
             </div>
-
-
-
-
-
-
-
-
-            <!--
-
-            src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar">
-
-    <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar">
-
-
-    <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar">
-    -->
         </section>
 
     </section>
 
     <footer>
-        <div class="propos">
-            <p class="footer">A propos</p>
-            <br />
-            <a href="#">Fonctionnement du site</a>
-            <br />
-            <a href="#">Conditions générales</a>
-            <br />
-            <a href="#">Données et confidentialité</a>
-        </div>
-        <div class="hebergement">
-            <p class="footer">Nos hèbergements</p>
-            <br />
-            <a href="#">Charte qualité</a>
-            <br />
-            <a href="#">Proposer votre hotel</a>
-        </div>
-        <div class="assistance">
-            <p class="footer">Assistance</p>
-            <br />
-            <a href="#">Centre d'aide</a>
-            <br />
-            <a href="#">Nous contacter</a>
-        </div>
+        
+            <div class="propos">
+                <p class="footer">A propos</p>
+                <br />
+                <a href="#">Fonctionnement du site</a>
+                <br />
+                <a href="#">Conditions générales</a>
+                <br />
+                <a href="#">Données et confidentialité</a>
+            </div>
+            <div class="hebergement">
+                <p class="footer">Nos hèbergements</p>
+                <br />
+                <a href="#">Charte qualité</a>
+                <br />
+                <a href="#">Proposer votre hotel</a>
+            </div>
+            <div class="assistance">
+                <p class="footer">Assistance</p>
+                <br />
+                <a href="#">Centre d'aide</a>
+                <br />
+                <a href="#">Nous contacter</a>
+            </div>
+       
     </footer>
 
 </body>
