corriger index.html apres la validation avec W3C

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <!--navigation-->
         <nav>
-            <img src="images/logo/Booki.png" ; alt="Booki@3x.png" />
+            <img src="images/logo/Booki.png" alt="Booki@3x.png" />
             <div class="menu">
                 <a href="#">Hèbergements</a>
                 <a href="#">Activités</a>
@@ -67,21 +67,21 @@
                 <section class="hebergement-rouge">
                     <article class="hebergement-jaune">
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Avatar">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hebergement">
                             <div class="container">
                                 <h4><b>Auberge La Canebière </b></h4>
                                 <p>Nuit à partir de 25 €</p>
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Avatar">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hebergement">
                             <div class="container">
                                 <h4><b>Hotel du port </b></h4>
                                 <p>Nuit à partir de 52 €</p>
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Avatar">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hebergement">
                             <div class="container">
                                 <h4><b>Hotel les mouettes </b></h4>
                                 <p>Nuit à partir de 76 €</p>
@@ -90,21 +90,21 @@
                     </article>
                     <article class="hebergement-jaune">
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Avatar">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hebergement">
                             <div class="container">
                                 <h4><b>Hotel de la mer </b></h4>
                                 <p>Nuit à partir de 46 €</p>
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Avatar">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hebergement">
                             <div class="container">
                                 <h4><b>Auberge le panier </b></h4>
                                 <p>Nuit à partir de 23 €</p>
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Avatar">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hebergement">
                             <div class="container">
                                 <h4><b>Hotel chez Amina </b></h4>
                                 <p>Nuit à partir de 96 €</p>
@@ -119,21 +119,21 @@
                 <p>Les plus populaires</p>
                 <article class="populaire-jaune">
                     <div class="card-populaire">
-                        <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Avatar">
+                        <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="populaire">
                         <div class="container">
                             <h4><b>Hotel le soleil du matin </b></h4>
                             <p>Nuit à partir de 128 €</p>
                         </div>
                     </div>
                     <div class="card-populaire">
-                        <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Avatar">
+                        <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="populaire">
                         <div class="container">
                             <h4><b>Chambre d'hotes Au coeur de l'eau </b></h4>
                             <p>Nuit à partir de 71 €</p>
                         </div>
                     </div>
                     <div class="card-populaire">
-                        <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Avatar">
+                        <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="populaire">
                         <div class="container">
                             <h4><b>Hotel Bleu et Blanc </b></h4>
                             <p>Nuit à partir de 68 €</p>
@@ -148,19 +148,19 @@
         <p id="activite">Activités à Marseille</p>
         <section class="images-activite">
             <div class="card-activite">
-                <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Avatar">
+                <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="activite">
                 <p>Vieux-Port</p>
             </div>
             <div class="card-activite">
-                <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Avatar">
+                <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="activite">
                 <p>Fort de Pomègues</p>
             </div>
             <div class="card-activite">
-                <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Avatar">
+                <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="activite">
                 <p>Parc national des Calanques</p>
             </div>
             <div class="card-activite">
-                <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Avatar">
+                <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="activite">
                 <p>Notre-Dame-de-la-Garde</p>
             </div>
         </section>
