modification du chemin du logo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 
-<html lang="fr" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="fr">
 <head>
     <meta charset="utf-8" />
     <link href="CSS/style.css" rel="stylesheet" />
@@ -11,18 +11,19 @@
     <!-- Placer votre kit de logo ici -->
     <script src="https://kit.fontawesome.com/bd510b2bbe.js" crossorigin="anonymous"></script>
     <title>booki</title>
+
 </head>
 <body>
-    <header class="header">
+    <header>
         <!--navigation-->
         <nav>
-            <img src="images/logo/Booki.png" alt="Booki@3x.png" />
+            <img src="Images/logo/Booki.png" alt="Booki@3x.png" />
             <div class="menu">
                 <a href="#">Hèbergements</a>
                 <a href="#">Activités</a>
             </div>
         </nav>
-        <h1>Trouvez votre hèbergement pour des vacances de reve</h1>
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En plein centre-ville ou en pleine nature</p>
 
         <!-- Partie recherche-->
