rajouté un favicon dans l'onglet de la page HTML

--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 
 <html lang="fr">
 <head>
+    <!--encodage de la page HTML-->
     <meta charset="utf-8" />
-    <link href="CSS/style.css" rel="stylesheet" />
-    <!--connection au serveur goggle-font Ici la police que l'on a choisie est Raleway'-->
+    <link  rel="stylesheet" href="CSS/style.css" />
+    <!--Indication avec preconnect au navigateur de la connection au serveur goggle-font. Ici la police que l'on a choisie est Raleway'-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" >
     <!-- Placer votre kit de logo ici -->
     <script src="https://kit.fontawesome.com/bd510b2bbe.js" crossorigin="anonymous"></script>
-    <title>booki</title>
-
+    <!--création du favicon et du titre dans l'onglet de la page HTML'-->
+    <link rel="icon" type="image/png" href="Images/logo/Booki.png" sizes="32x32" />
+    <title id="titre"> booki</title>
 </head>
 <body>
     <header>
