--- a/index.html
+++ b/index.html
@@ -13,21 +13,20 @@
     <script src="https://kit.fontawesome.com/bd510b2bbe.js" crossorigin="anonymous"></script>
     <!--création du favicon et du titre dans l'onglet de la page HTML'-->
     <link rel="icon" type="image/png" href="Images/logo/Booki.png" sizes="32x32" />
-    <title id="titre"> booki</title>
+    <title> booki</title>
 </head>
 <body>
     <header>
         <!--navigation-->
         <nav>
-            <img src="Images/logo/Booki.png" alt="Booki@3x.png" />
+            <img src="Images/logo/Booki.png" alt="Logo" />
             <div class="menu">
-                <a href="#">Hèbergements</a>
+                <a href="#">Hébergements</a>
                 <a href="#">Activités</a>
             </div>
         </nav>
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En plein centre-ville ou en pleine nature</p>
-
         <!-- Partie recherche-->
         <div class="recherche">
             <i class="fa-solid fa-location-dot"></i>
@@ -36,21 +35,18 @@
                 <input id="recherche" type="submit" value="Recherche">
             </form>
         </div>
-
         <!--Partie filtre-->
         <div class="filtre">
             <div class="liens">
-                <p id="filtre">Filtres</p>
+                <p>Filtres</p>
                 <div class="lien1">
-                    <p id="Eco"><a href="#"> Economique </a></p>
-
+                    <a href="#"> Economique </a>
                 </div>
                 <div class="lien2">
                     <a href="#">Familial</a>
                 </div>
                 <div class="lien3">
                     <a href="#">Romantique</a>
-
                 </div>
                 <div class="lien4">
                     <a href="#">Animaux autorisés</a>
@@ -68,77 +64,80 @@
             <section class="hebergement-bleu">
                 <p>Hébergements à Marseille</p>
                 <section class="hebergement-rouge">
+
                     <article class="hebergement-jaune">
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hébergement">
                             <div class="container">
                                 <h4><b>Auberge La Canebière </b></h4>
                                 <p>Nuit à partir de 25 €</p>
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="hébergement">
                             <div class="container">
-                                <h4><b>Hotel du port </b></h4>
+                                <h4><b>Hôtel du port </b></h4>
                                 <p>Nuit à partir de 52 €</p>
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hébergement">
                             <div class="container">
-                                <h4><b>Hotel les mouettes </b></h4>
+                                <h4><b>Hôtel les mouettes </b></h4>
                                 <p>Nuit à partir de 76 €</p>
                             </div>
                         </div>
                     </article>
+
                     <article class="hebergement-jaune">
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hébergement">
                             <div class="container">
-                                <h4><b>Hotel de la mer </b></h4>
+                                <h4><b>Hôtel de la mer </b></h4>
                                 <p>Nuit à partir de 46 €</p>
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hébergement">
                             <div class="container">
                                 <h4><b>Auberge le panier </b></h4>
                                 <p>Nuit à partir de 23 €</p>
                             </div>
                         </div>
                         <div class="card-hebergement">
-                            <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hebergement">
+                            <img class="Img-hebergement" src="Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hébergement">
                             <div class="container">
-                                <h4><b>Hotel chez Amina </b></h4>
+                                <h4><b>Hôtel chez Amina </b></h4>
                                 <p>Nuit à partir de 96 €</p>
                             </div>
                         </div>
                     </article>
-                </section>
 
+                </section>
                 <h5 id="next"><a href="#">Afficher plus</a></h5>
             </section>
+
             <section class="populaire-rouge">
                 <p>Les plus populaires</p>
                 <article class="populaire-jaune">
                     <div class="card-populaire">
                         <img class="Img-populaire" src="Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="populaire">
                         <div class="container">
-                            <h4><b>Hotel le soleil du matin </b></h4>
+                            <h4><b>Hôtel le soleil du matin </b></h4>
                             <p>Nuit à partir de 128 €</p>
                         </div>
                     </div>
                     <div class="card-populaire">
                         <img class="Img-populaire" src="Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="populaire">
                         <div class="container">
-                            <h4><b>Chambre d'hotes Au coeur de l'eau </b></h4>
+                            <h4><b>Chambre d'hôtes Au coeur de l'eau </b></h4>
                             <p>Nuit à partir de 71 €</p>
                         </div>
                     </div>
                     <div class="card-populaire">
                         <img class="Img-populaire" src="Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="populaire">
                         <div class="container">
-                            <h4><b>Hotel Bleu et Blanc </b></h4>
+                            <h4><b>Hôtel Bleu et Blanc </b></h4>
                             <p>Nuit à partir de 68 €</p>
                         </div>
                     </div>
@@ -151,29 +150,27 @@
         <p id="activite">Activités à Marseille</p>
         <section class="images-activite">
             <div class="card-activite">
-                <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="activite">
+                <img src="Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="activité">
                 <p>Vieux-Port</p>
             </div>
             <div class="card-activite">
-                <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="activite">
+                <img src="Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="activité">
                 <p>Fort de Pomègues</p>
             </div>
             <div class="card-activite">
-                <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="activite">
+                <img src="Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="activité">
                 <p>Parc national des Calanques</p>
             </div>
             <div class="card-activite">
-                <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="activite">
+                <img src="Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="activité">
                 <p>Notre-Dame-de-la-Garde</p>
             </div>
         </section>
-
     </section>
 
-    <footer>
-        
+    <footer>    
             <div class="propos">
-                <p class="footer">A propos</p>
+                <p>A propos</p>
                 <br />
                 <a href="#">Fonctionnement du site</a>
                 <br />
@@ -182,21 +179,19 @@
                 <a href="#">Données et confidentialité</a>
             </div>
             <div class="hebergement">
-                <p class="footer">Nos hèbergements</p>
+                <p>Nos hébergements</p>
                 <br />
                 <a href="#">Charte qualité</a>
                 <br />
-                <a href="#">Proposer votre hotel</a>
+                <a href="#">Proposer votre hôtel</a>
             </div>
             <div class="assistance">
-                <p class="footer">Assistance</p>
+                <p>Assistance</p>
                 <br />
                 <a href="#">Centre d'aide</a>
                 <br />
                 <a href="#">Nous contacter</a>
-            </div>
-       
+            </div>      
     </footer>
-
 </body>
 </html>
