--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <a href="#">Activités</a>
             </div>
         </nav>
-        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-        <p>En plein centre-ville ou en pleine nature</p>
+        <p class="titre">Trouvez votre hébergement pour des vacances de rêve</p>
+        <h5>En plein centre-ville ou en pleine nature</h5>
         <!-- Partie recherche-->
         <div class="recherche">
             <i class="fa-solid fa-location-dot"></i>
