ajout du classement par des etoiles

--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
                             <div class="container">
                                 <h4><b>Auberge La Canebière </b></h4>
                                 <p>Nuit à partir de 25 €</p>
+                                <div id="star">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
                             </div>
                         </div>
                         <div class="card-hebergement">
@@ -81,6 +88,13 @@
                             <div class="container">
                                 <h4><b>Hôtel du port </b></h4>
                                 <p>Nuit à partir de 52 €</p>
+                                <div id="star">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
                             </div>
                         </div>
                         <div class="card-hebergement">
@@ -88,6 +102,13 @@
                             <div class="container">
                                 <h4><b>Hôtel les mouettes </b></h4>
                                 <p>Nuit à partir de 76 €</p>
+                                <div id="star">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
                             </div>
                         </div>
                     </article>
@@ -98,6 +119,13 @@
                             <div class="container">
                                 <h4><b>Hôtel de la mer </b></h4>
                                 <p>Nuit à partir de 46 €</p>
+                                <div id="star">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
                             </div>
                         </div>
                         <div class="card-hebergement">
@@ -105,6 +133,13 @@
                             <div class="container">
                                 <h4><b>Auberge le panier </b></h4>
                                 <p>Nuit à partir de 23 €</p>
+                                <div id="star">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
                             </div>
                         </div>
                         <div class="card-hebergement">
@@ -112,6 +147,13 @@
                             <div class="container">
                                 <h4><b>Hôtel chez Amina </b></h4>
                                 <p>Nuit à partir de 96 €</p>
+                                <div id="star">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
                             </div>
                         </div>
                     </article>
@@ -142,6 +184,13 @@
                         <div class="container">
                             <h4><b>Chambre d'hôtes Au coeur de l'eau </b></h4>
                             <p>Nuit à partir de 71 €</p>
+                            <div id="star">
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="card-populaire">
@@ -149,6 +198,13 @@
                         <div class="container">
                             <h4><b>Hôtel Bleu et Blanc </b></h4>
                             <p>Nuit à partir de 68 €</p>
+                            <div id="star">
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
                         </div>
                     </div>
                 </article>
